--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 Django==1.7.6
+django-bootstrap3-datetimepicker==2.2.3
+django-dajax==0.9.2
+django-dajaxice==0.7
+django-paypal==0.2.1
 django-summernote==0.6.3
+djangoajax==2.2.15
 foursquare==2015.2.1
 MySQL-python==1.2.5
 Pillow==2.7.0
 requests==2.6.0
 six==1.9.0
-django-bootstrap3-datetimepicker==2.2.3
+South==1.0.2
